infra/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: janet
spec:
  selector:
    app: janet-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
